(library
 (name spring)
 (public_name spring)
 (kind ppx_rewriter)
 (preprocess
  (pps ppxlib.metaquot))
 (libraries
  eio
  ptime
  astring
  fmt
  domain-name
  ppxlib
  csexp
  ipaddr
  base64
  fpath
  tls
  tls-eio
  ca-certs
  x509
  magic-mime
  mirage-crypto
  mirage-crypto-rng
  mirage-crypto-rng-eio))
