(mdx
 (package spring)
 (libraries
  eio
  eio.core
  eio.unix
  eio.mock
  eio_main
  fmt
  cstruct
  ptime
  ptime.clock.os
  domain-name
  spring
  base64
  ohtml
  ipaddr
  mirage-crypto
  mirage-crypto-rng
  mirage-crypto-rng-eio
  router_test))

(library
 (name router_test)
 (libraries spring)
 (modules router_test)
 (preprocess
  (pps spring)))
