(copy_files certificates/*.pem)

(copy_files certificates/*.key)

(copy_files ../examples/hello/master.key)

(mdx
 (package spring)
 (deps server.pem server.key server-ec.pem server-ec.key)
 (libraries
  eio
  eio.core
  eio.unix
  eio.mock
  eio_main
  fmt
  cstruct
  ptime
  ptime.clock.os
  domain-name
  spring
  base64
  ohtml
  ipaddr
  tls
  tls-eio
  unix
  mirage-crypto
  mirage-crypto-rng
  mirage-crypto-rng-eio
  router_test))

(library
 (name router_test)
 (libraries spring)
 (modules router_test)
 (preprocess
  (pps spring)))
